2019-08-03 Alexander Malysh <amalysh @ kannel.org>
    * gwlib/http.[ch]: added PUT support.
      Thanks to Lamasuta, Franck <franck.lamasuta at vodafone.com> for this patch.

2019-08-03 Alexander Malysh <amalysh @ kannel.org>
    * gwlib/dbpool_mysql.c: fixed compilation for mysql v8. This fixes #782.

2019-08-03 Alexander Malysh <amalysh @ kannel.org>
    * gwlib/cfg.c: fixed issue with multiple includes of the same file, we don't bell out
      anymore, just ignore

2019-07-09 Alexander Malysh <amalysh @ kannel.org>
    * gw/smsc/smsc_cimd2.c: use smsc connection id instead of name for DLRs.

2019-07-09 Alexander Malysh <amalysh @ kannel.org>
    * doc/userguide/userguide.xml, gw/smsc/http/clickatell.c, gw/smsc/smsc_http.c,
      gw/smsc/smsc_http_p.h, gwlib/cfg.def: applied patch from Franck Lamasuta.
      Main changes:
        - Better support of Clickatell HTTP API (Developer’s Central): from, mo, validity and callback parameters
        - Better DLR and error management
 
     Minor changes:
       - Removed useless struct field (conndata->proxy)
       - Fixed code indentation
       - Removed tabs in cfg.def
       - User guide: Fixed invalid character entities (&auml; and &nbsp;) + Fixed literals (& and >)

2019-06-24 Alexander Malysh <amalysh @ kannel.org>
    * gwlib/http.c: this fixes race if no list is in conn pool anymore #802.
      Thanks to Ivan Shcherbak for the fix.

2019-06-07 Alexander Malysh <amalysh @ kannel.org>
    * gwlib/octstr.c: fixed url encoding safe chars

2019-01-21 Alexander Malysh <amalysh @ kannel.org>
    * gw/bb_boxc.c: fixed small mem leak wile initializing of box_allow_ip/box_deny_ip.
      Thanks to Paul Bagyenda for report.

2018-11-22  Stipe Tolj  <stolj at kannel.org>
    * gwlib/date.c: fix case where, struct universaltime element offset_sec may
      be initialized with random value on MacOS X 10.11.x (clang-800.0.42.1), 
      but is then used  in the following up call to date_convert_universal(), so 