@@ -203,7 +203,8 @@ enum {
 	HTTP_METHOD_GET  = 1,
 	HTTP_METHOD_POST = 2,
 	HTTP_METHOD_HEAD = 3,
-	HTTP_METHOD_PUT  = 4
+	HTTP_METHOD_PUT  = 4,
+    HTTP_METHOD_DELETE = 5
 };
 
 /*
