@@ -1,4 +1,7 @@
 2019-08-03 Alexander Malysh <amalysh @ kannel.org>
+    * gwlib/http.[ch]: added DELETE moethod support.
+
+2019-08-03 Alexander Malysh <amalysh @ kannel.org>
     * gwlib/http.[ch]: added PUT support.
       Thanks to Lamasuta, Franck <franck.lamasuta at vodafone.com> for this patch.
 
